--- a/foundations/03-grouping-selectors/index.html
+++ b/foundations/03-grouping-selectors/index.html
@@ -7,8 +7,9 @@
     <title>Grouping Selectors</title>
     <link rel="stylesheet" href="style.css">
   </head>
+  
   <body>
-    <button>Click Me!</button>
-    <button>No, Click Me!</button>
+    <button class="me">Click Me!</button>
+    <button class="me2">No, Click Me!</button>
   </body>
 </html>
